# rust-aws-aplyground

./: .gitignore  README.md
rust-aws-ecs/: Cargo.toml  Dockerfile  application.yaml
rust-aws-ecs/src/: main.rs
rust-aws-ecs/src/service/: status.rs
