[package]
name = "rust-aws-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
#aws-sdk-dynamodb = "0.12.0"
#aws-config = "0.12.0"
config = { version = "0.13", default_features = false, features = ["yaml"] }